[package]
name = "score-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.11.0", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "json"] }
ntex-cors = "2.0.0"
garde = { version = "0.22.0", features = ["derive"] }
serde_valid = "1.0.5"
serde_json = "1.0.138"
regex = "1.11.1"
lettre = "0.11.12"
# Para lettre hay que instalar: libssl-dev, pkg-config, libudev-dev
# sudo apt install libssl-dev pkg-config libudev-dev
oracle = { version = "0.6.3", features = ["chrono"] }
futures = "0.3.31"
dotenvy = "0.15.7"
chrono = "0.4.39"
log = "0.4.25"
ftail = "0.2.0"
jsonwebtoken = "9"
