[package]
name = "score-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.6"
actix-multipart = "0.7"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
jsonwebtoken = "9"
log = "0.4"
env_logger = "0.11"
oracle = { version = "0.6", features = ["chrono"] }
md5 = "0.7"
sha2 = "0.10"
csv = "1.3"
calamine = "0.23"
futures-util = "0.3"


